[workspace]
members = ["xtask"]
exclude = ["sbpf-linker", "rust-compiler"]

[package]
name = "upstream-u128-test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
mollusk-svm = "0.9.0"
solana-instruction = "3.1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Patch section to override Solana runtime crates with blueshift forks.
# This allows testing JIT and interpreter modifications locally
[patch.crates-io]
# SBPF VM (contains JIT compiler and interpreter)
solana-sbpf = { git = "https://github.com/blueshift-gg/solana-sbpf", branch = "u128-intrinsics" }
